Layout issues fix for Safari, id assumption maintained as string

--- a/mathesar_ui/src/components/tabs/TabContainer.scss
+++ b/mathesar_ui/src/components/tabs/TabContainer.scss
@@ -91,5 +91,6 @@
     border: 1px solid #dfdfdf;
     border-top: none;
     border-radius: 0px 0px 2px 2px;
+    position: relative;
   }
 }
