--- a/mathesar_ui/src/sections/import-file/ImportFile.scss
+++ b/mathesar_ui/src/sections/import-file/ImportFile.scss
@@ -1,5 +1,6 @@
 .import-file-view {
   padding: 20px;
+  flex-grow: 1;
 
   .error {
     color: red;
